--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ function enterFullscreen (element) {
 </script>
 
 <script src='vendor/three.js/editor/js/libs/signals.min.js'></script>
-<script src='vendor/phoneasvrcontroller.js/node_modules/socket.io/node_modules/socket.io-client/socket.io.js'></script>
+<script src='vendor/phoneasvrcontroller.js/node_modules/socket.io/node_modules/socket.io-client/dist/socket.io.js'></script>
 <script src='vendor/phoneasvrcontroller.js/src/phoneasvrcontrollercontext.js'></script>
 <script src='vendor/phoneasvrcontroller.js/src/phoneasvrcontrollerphone.js'></script>
 <script src='vendor/phoneasvrcontroller.js/examples/js/threex.daydreamcontroller.js'></script>
